--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "serve": "serve -s dist -p 3000"
   },
   "dependencies": {
+    "openai": "^4.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0"
