--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "serve": "serve -s dist -p 3000"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "openai": "^4.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0"
